update real infomation

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="./css/mobile.css" />
     <link rel="stylesheet" href="./css/tablet.css" />
     <link rel="stylesheet" href="./css/laptop.css" />
-    <title>Bootstrap - Assignment 03</title>
+    <title>Portfolio cá nhân</title>
 
     <link rel="stylesheet" href="./model-img.html" />
   </head>
@@ -64,7 +64,7 @@
           </a>
 
           <div class="col-md-1 col-lg-4 info">
-            <h1>Nguyễn Văn A</h1>
+            <h1>Phạm Văn Quyết</h1>
             <span>Full Stack Developer</span>
 
             <!-- <div class="info-avatar">
@@ -95,8 +95,8 @@
           <div id="target" class="col col-md-6 col-xl-6">
             <h1 class="section-title">Mục tiêu nghề nghiệp</h1>
             <p>
-              Là một sinh viên đã hoàn thành chương trình chứng chỉ Doanh Nghiệp của FUNiX. Em mong muốn mình sẽ được
-              làm việc với vị trí
+              <!-- Là một sinh viên đã hoàn thành chương trình chứng chỉ Doanh Nghiệp của FUNiX.  -->
+              Em mong muốn mình sẽ được làm việc với vị trí
               <b>Fullstack Developer</b>, có thể vận dụng những kiến thức đã được trau dồi và không ngừng học hỏi để
               phát triển bản thân, cũng như hoàn thành tốt nhất công việc được giao.
             </p>
@@ -108,16 +108,16 @@
                 <p><span>Giới tính</span> : Nam</p>
               </li>
               <li>
-                <p><span>Ngày sinh</span> : 19/05/2000</p>
+                <p><span>Ngày sinh</span> : 05/12/2002</p>
               </li>
               <li>
-                <p><span>Điện thoại</span> : (+84) 912398xxx</p>
+                <p><span>Điện thoại</span> : (+84) 968848813</p>
               </li>
               <li>
-                <p><span>Email</span> : sinhvien@funix.edu.vn</p>
+                <p><span>Email</span> : quyet05122002@gmail.com</p>
               </li>
               <li>
-                <p><span>Địa chỉ</span> : Số 10, đường 10, Hà Nội</p>
+                <p><span>Địa chỉ</span> : Thái Nguyên</p>
               </li>
               <li>
                 <p><span>Website</span> : https://abc.tech</p>
@@ -159,9 +159,9 @@
                   <div class="description">
                     <p>
                       - Xây dựng, phát triển Website dựa trên thiết kể và yêu cầu đã có. <br />
-                      - Phân tích và thiết kế Database, sử dụng các hệ quản trị CSDL (MySQL, SQLServer, NoSQL, ...) và
-                      viết được các câu truy vấn. <br />
-                      - Sử dụng ngôn ngữ server-side (Python, Java, ...) để xây dựng các Web Service.
+                      - Phân tích và thiết kế Database, sử dụng các hệ quản trị CSDL (MySQL, SQLServer, ...) và viết
+                      được các câu truy vấn. <br />
+                      <!-- - Sử dụng ngôn ngữ server-side (Python, Java, ...) để xây dựng các Web Service. -->
                     </p>
                   </div>
                 </div>
@@ -175,7 +175,7 @@
                   <div class="description">
                     <p>
                       - Thiết kế Website dự trên yêu cầu của khách hàng. <br />
-                      - Sử dụng các công cụ: Figma, Canva, PTS.
+                      <!-- - Sử dụng các công cụ: Figma, Canva, PTS. -->
                     </p>
                   </div>
                 </div>
@@ -210,13 +210,13 @@
                 <div class="jiic-item">
                   <div class="jiic-heading">
                     <i class="dot fa-solid fa-circle"></i>
-                    <h3 class="heading">Cử nhân - ĐH FPT</h3>
-                    <p class="sub-heading">08/2016 - 07/2019</p>
+                    <h3 class="heading">Cử nhân - ĐH ICTU</h3>
+                    <p class="sub-heading">10/2020 - 07/2025</p>
                   </div>
                   <div class="description">
                     <p>
                       - Chuyên ngành: Kỹ thuật phần mềm. <br />
-                      - GPA: 3.2 / 4
+                      - GPA: 3.1 / 4
                     </p>
                   </div>
                 </div>
@@ -232,7 +232,7 @@
                 <i class="fa-solid fa-toolbox"></i>
               </div>
               <div class="jii-content">
-                <div class="jiic-item">
+                <!-- <div class="jiic-item">
                   <div class="jiic-heading">
                     <i class="dot fa-solid fa-circle"></i>
                     <h3 class="heading">FPT Edu Hackathon 2019</h3>
@@ -244,16 +244,16 @@
                       - Đề tài: Trang web về phân loại rác thải.
                     </p>
                   </div>
-                </div>
+                </div> -->
 
                 <div class="jiic-item">
                   <div class="jiic-heading">
                     <i class="dot fa-solid fa-circle"></i>
-                    <h3 class="heading">Câu lạc bộ Z</h3>
-                    <p class="sub-heading">08/2016 - 08/2017</p>
+                    <h3 class="heading">Câu lạc bộ Tin Học</h3>
+                    <p class="sub-heading">08/2021 - 08/2022</p>
                   </div>
                   <div class="description">
-                    <p>- Trưởng ban chuyên môn</p>
+                    <p>- Thành viên tích cực</p>
                   </div>
                 </div>
               </div>
@@ -298,18 +298,18 @@
                 <i class="fa-solid fa-microphone"></i>
               </div>
               <div class="jii-content">
-                <h3 class="lang-heading">Tiếng Anh - IELTS 7.0</h3>
+                <h3 class="lang-heading">Tiếng Anh - A2</h3>
                 <div class="level-skill-bar en-lang">
                   <div class="level1"></div>
                   <div class="level2"></div>
                   <div class="level3"></div>
                 </div>
-                <h3 class="lang-heading">Tiếng Nhật - JLPT N4</h3>
+                <!-- <h3 class="lang-heading">Tiếng Nhật - JLPT N4</h3>
                 <div class="level-skill-bar jp-lang">
                   <div class="level1"></div>
                   <div class="level2"></div>
                   <div class="level3"></div>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -334,12 +334,12 @@
                   <div class="level2"></div>
                   <div class="level3"></div>
                 </div>
-                <h3 class="tech-heading">NodeJS: Intermediate</h3>
+                <!-- <h3 class="tech-heading">NodeJS: Intermediate</h3>
                 <div class="level-skill-bar nodejs-skill">
                   <div class="level1"></div>
                   <div class="level2"></div>
                   <div class="level3"></div>
-                </div>
+                </div> -->
                 <h3 class="tech-heading">Bootstrap 5: Fundamental</h3>
                 <div class="level-skill-bar bootstrap-skill">
                   <div class="level1"></div>
@@ -355,10 +355,25 @@
 
     <section id="certificate" class="bg-grey">
       <div class="container">
-        <h1 class="section-title section-title-2 ">Chứng chỉ - Giải thưởng</h1>
+        <h1 class="section-title section-title-2">Chứng chỉ - Giải thưởng</h1>
 
         <div class="certificate-content justify-content-center px-lg-0 mx-lg-0 px-3 px-md-5 mx-md-5">
           <div class="row m-0 row-1 row-cols-md-2 align-items-center">
+            <!-- <div class="certificate-item js-certificate-item col my-5 px-md-4 px-0">
+              <div class="row">
+                <div class="item-img col-xl-5">
+                  <img src="./images/Cert_DBI.png" alt="cert1" />
+                </div>
+                <div class="item-content col-xl-7">
+                  <h3 class="item-heading">CHỨNG CHỈ LẬP TRÌNH WEB - FUNIX</h3>
+                  <p class="detail">
+                    - Chứng chỉ thuộc chương trình CCDN <br />
+                    - GPA: 8.6
+                  </p>
+                </div>
+              </div>
+            </div> -->
+
             <div class="certificate-item js-certificate-item col my-5 px-md-4 px-0">
               <div class="row">
                 <div class="item-img col-xl-5">
@@ -393,7 +408,7 @@
             </div>
           </div>
 
-          <div class="column-line"></div>
+          <!-- <div class="column-line"></div>
 
           <div class="row align-items-center px-lg-2">
             <div class="certificate-item js-certificate-item col col-lg-6 my-5 px-3 px-md-4 mx-md-2">
@@ -410,7 +425,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -419,7 +434,9 @@
       <div class="container">
         <h1 class="section-title section-title-2">Dự án</h1>
 
-        <div class="project-content row row-1 row-cols-md-3 g-lg-5 px-3 px-lg-0 mx-lg-0 px-md-5 mx-md-5 py-4 justify-content-center">
+        <div
+          class="project-content row row-1 row-cols-md-3 g-lg-5 px-3 px-lg-0 mx-lg-0 px-md-5 mx-md-5 py-4 justify-content-center"
+        >
           <div class="col py-3">
             <div class="project-item js-project-item h-100">
               <img
@@ -429,11 +446,12 @@
               />
               <div class="pi-body">
                 <div class="item-heading js-project-item-child">
-                  <h3 class="heading">CV CÁ NHÂN</h3>
+                  <!-- <h3 class="heading">CV CÁ NHÂN</h3> -->
+                  <h3 class="heading">PORTFOLIO CÁ NHÂN</h3>
                 </div>
 
                 <div class="detail-heading js-project-item-child">
-                  <span class="year">2021</span>
+                  <span class="year">2022</span>
                   <p class="business">
                     <i class="fa-solid fa-user"></i>
                     FUNIX
@@ -446,7 +464,7 @@
 
                 <div class="detail js-project-item-child">
                   <p>Mô tả</p>
-                  <p>Trang Web CV cá nhân online. Gồm các thông tin các nhân cũng như kỹ năng nghề nghiệp.</p>
+                  <p>Trang Web PORTFOLIO cá nhân online. Gồm các thông tin các nhân cũng như kỹ năng nghề nghiệp.</p>
                 </div>
 
                 <div class="task js-project-item-child">
@@ -508,7 +526,7 @@
             </div>
           </div>
 
-          <div class="col py-3">
+          <!-- <div class="col py-3">
             <div class="project-item js-project-item h-100">
               <img
                 src="./images/project_3.png"
@@ -552,7 +570,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
