--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
               </div>
 
               <div class="jii-content">
-                <div class="jiic-item">
+                <!-- <div class="jiic-item">
                   <div class="jiic-heading">
                     <i class="dot fa-solid fa-circle"></i>
                     <h3 class="heading">FUNiX</h3>
@@ -205,7 +205,7 @@
                       - GPA: 9 / 10
                     </p>
                   </div>
-                </div>
+                </div> -->
 
                 <div class="jiic-item">
                   <div class="jiic-heading">
