update real information and space update between elements

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <link rel="stylesheet" href="./css/laptop.css" />
     <title>Portfolio cá nhân</title>
 
-    <link rel="stylesheet" href="./model-img.html" />
+    <!-- <link rel="stylesheet" href="./model-img.html" /> -->
   </head>
 
   <body>
